--- a/frontend/pages/contactos.html
+++ b/frontend/pages/contactos.html
@@ -8,9 +8,28 @@
     <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
-    <header>
-        <h1>Navbar</h1>
-    </header>
+  <!-- Header -->
+  <header>
+    <nav class="navbar">
+      <div class="navbar-container">
+        <a href="../pages/home.html" class="logo">
+          <img src="../images/logo.jpg" alt="Logo de la Fundación">
+        </a>
+        <ul class="nav-links">
+          <li><a href="../pages/home.html">Inicio</a></li>
+          <li><a href="../pages/sobre-nosotros.html">Sobre Nosotros</a></li>
+          <li><a href="../pages/emprendimientos.html">Emprendimientos</a></li>
+          <li><a href="../pages/contactos.html">Contactos</a></li>
+          <li><a href="../pages/donaciones.html">Donaciones</a></li>
+        </ul>
+        <div class="hamburger" onclick="toggleMenu()">
+          <div class="line"></div>
+          <div class="line"></div>
+          <div class="line"></div>
+        </div>
+      </div>
+    </nav>
+  </header>
 
 
     <main>
