--- a/frontend/pages/home.html
+++ b/frontend/pages/home.html
@@ -13,25 +13,28 @@
     <img src="..//images/275701307_248028827536013_118506673811481728_n.jpg" alt="Logo de la Fundación">
   </div>
 
-    <header>
-      <nav class="navbar">
-        <div class="navbar-container">
-          <a href="#" class="logo">
-            <img src="../images/logo.jpg" alt="Logo de la Fundación">
-          </a>
-          <ul class="nav-links">
-            <li><a href="#home">Inicio</a></li>
-            <li><a href="#about">Sobre nosotros</a></li>
-            <li><a href="#projects">Emprendimientos</a></li>
-            <li><a href="../pages/contactos.html">Contactos</a></li>
-          </ul>
-          <div class="hamburger" onclick="toggleMenu()">
-            <div class="line"></div>
-            <div class="line"></div>
-            <div class="line"></div>
-          </div>
-        </nav>
-      </header>
+  <!-- Header -->
+  <header>
+    <nav class="navbar">
+      <div class="navbar-container">
+        <a href="../pages/home.html" class="logo">
+          <img src="../images/logo.jpg" alt="Logo de la Fundación">
+        </a>
+        <ul class="nav-links">
+          <li><a href="../pages/home.html">Inicio</a></li>
+          <li><a href="../pages/sobre-nosotros.html">Sobre Nosotros</a></li>
+          <li><a href="../pages/emprendimientos.html">Emprendimientos</a></li>
+          <li><a href="../pages/contactos.html">Contactos</a></li>
+          <li><a href="../pages/donaciones.html">Donaciones</a></li>
+        </ul>
+        <div class="hamburger" onclick="toggleMenu()">
+          <div class="line"></div>
+          <div class="line"></div>
+          <div class="line"></div>
+        </div>
+      </div>
+    </nav>
+  </header>
       
 
       <section class="carousel-wrapper">
