--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -24,7 +24,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Edu+AU+VIC+WA+NT+Guides:wght@400..700&family=Edu+AU+VIC+WA+NT+Hand:wght@400..700&family=Protest+Strike&display=swap" rel="stylesheet"> <!-- Cambia 'Montserrat' a la fuente que elijas -->
+    <title>FUNDACIÓN RESSURGIR</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
